<resources>
    <string name="app_name">Delivery Boy App</string>
    <string name="add_alarm">Accept New Order</string>
    <string name="new_alarm_added">Order Completed successfully</string>
    <string name="form_hint_title">Customer Name (required)</string>
    <string name="form_hint_description">Product description (optional)</string>
    <string name="error_title_min_characters">At least %1$d characters</string>
    <string name="main_activity_explanation">Click the button to Accept order try it!</string>
    <string name="main_activity_explanation_disclaimer">This app DOES NOT set up Orders for real!</string>
    <string-array name="steps_titles">
        <item>Customer Name</item>
        <item>Product Description</item>
        <item>Delivery Time</item>
        <item>Customer Rating</item>
    </string-array>
    <string-array name="steps_subtitles">
        <item>Title of the alarm</item>
        <item>Description of the alarm</item>
        <item>Time when the alarm will go off</item>
        <item>Week schedule of the alarm</item>
    </string-array>
    <string-array name="week_days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>
    <string name="vertical_form_stepper_form_discard_question">Discard alarm?</string>
    <string name="vertical_form_stepper_form_info_will_be_lost">All the information about this new Order will be lost</string>
    <string name="vertical_form_stepper_form_confirm_button">Add Signatute</string>
    <string name="vertical_form_stepper_form_sending_data_message">Submitting Order Detail</string>
    <string name="hint_sign">Get Signature</string>
    <string name="sign_here_title">Sign Here</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_clear">Clear</string>
    <string name="hint_save">Save</string>
    <string name="bill_details_title">Bill Details</string>
    <string name="date">Date</string>
    <string name="date_data">16 Mar 2017</string>
    <string name="order_no">Order Number</string>
    <string name="order_no_data">10798565</string>
    <string name="buyers_name">Buyer\'s Name</string>
    <string name="buyers_name_data">Umesh</string>
    <string name="buyers_address">Buyer\'s Address</string>
    <string name="buyers_address_data">Pratap Nagar</string>
    <string name="contact_no">Contact Number</string>
    <string name="contact_no_data">0000000000</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_amount_data">Rs 1500</string>
    <string name="checkbox_text">I have Successfully Received the product</string>
    <string name="get_signature_text">Get Signature</string>
    <string name="agreement">I agree to the terms and conditions of \nZiffyTech Online Delivery App.</string>
    <string name="APIKEY">AIzaSyC7cxtbDmYirD_F76jb208Wokz7Vqh7BnA</string>
    <string-array name="acc">
        <item>Accept</item>
        <item>Reject</item>

    </string-array>
    <string name="facebook_app_id">193037251382392</string>
    <string name="fb_login_protocol_scheme">fb193037251382392</string>
    <string name="process_with_Data">Processing with data..</string>
    <string name="hint_search">Search Keywords</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="thankyou">Thank you for appointment</string>
    <string name="action_settings">Settings</string>
    <string name="error_can_not_connect_to_server">Can not connect to server</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="already_booked">Time Slot Already Booked</string>
    <string name="tab_morning">Morning</string>
    <string name="tab_afternoon">Afternoon</string>
    <string name="tab_evening">Evening</string>
    <string name="patient_contact">Patient Contact</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="contact_info">Contact Information</string>
    <string name="payment_process">Payment Process</string>
    <string name="nav_update_profile">Update Profile</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_my_appointment">My Orders</string>
    <string name="nav_vaccination">Vaccination Card</string>
    <string name="nav_wallet">Ziffy Wallet</string>
    <string name="nav_history">Appointment History</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_share">Share</string>
    <string name="nav_rating">Rate Us</string>
    <string name="nav_login">Login</string>
    <string name="item_title">Communicate</string>
    <string name="item_user">User Manage</string>
    <string name="tab_list">List</string>
    <string name="str_star">*</string>
    <string name="tab_map">Map</string>
    <string name="countinue_home">Continue Home</string>
    <string name="track_my_order">Track my order</string>
    <string name="show_appointment">Show Appointment</string>
    <string name="time">Time</string>
    <string name="tab_service">Services</string>
    <string name="tab_details">Details</string>
    <string name="tab_reviews">Reviews</string>
    <string name="tab_photo">Photos</string>
    <string name="tab_doctors">Doctors</string>
    <string name="prices"><u>price breakup</u></string>
    <string name="view"><u>view</u></string>
    <string name="create_account">Create an Account</string>
    <string name="createaccount_yourfirstname">Full Name</string>
    <string name="createaccount_yourphone">Mobile Number</string>
    <string name="createaccount_emailaddress">Email address</string>
    <string name="createaccount_createpassword">Create password</string>
    <string name="createaccount_termsandprivacypolicy">By signing , you are accepting</string>
    <string name="createaccount_our">our</string>
    <string name="createaccount_terms">Terms</string>
    <string name="createaccount_and">and</string>
    <string name="createaccount_privacypolicy">Privacy Policy</string>
    <string name="createaccount_next">Next</string>
    <string name="login_now">Login Now</string>
    <string name="sign_in">Sign In</string>
    <string name="signin_emailaddress">Email address</string>
    <string name="signin_password">Password</string>
    <string name="signin_forgotmypassword">Forgot password?</string>
    <string name="register_new">Register New User !!!</string>
    <string name="PersonalDetails">Personal Details</string>
    <string name="currency">₹ </string>
    <string name="currency_zero">₹ 0.00</string>
    <string name="required">Required</string>
    <string name="cancle">Cancle</string>
    <string name="your_ratings">Your Rating</string>
    <string name="your_comment">Your Comment</string>
    <string name="your_comment_hint">Your comment here</string>
    <string name="Name">Name</string>
    <string name="contact">Contact Number</string>
    <string name="age">Age</string>
    <string name="Email">Email ID</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of Birth*</string>
    <string name="blood_grpoup">Blood Group</string>
    <string name="Marital_status">Marital Status</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="EmergencyContact">Emergency Contact</string>
    <string name="Location">Locality</string>
    <string name="Allergies">Add Allergies</string>
    <string name="CurrentMedications">Current Medications</string>
    <string name="PastMedications">Past Medications</string>
    <string name="ChronicDiseases">Chronic Diseases</string>
    <string name="Injuries">Injuries</string>
    <string name="Surgeries">Surgeries</string>
    <string name="Occupation">Occupation</string>
    <string name="Smoking">Smoking</string>
    <string name="type_occup">IT/ Health/ Government/ Private/ Etc.</string>
    <string name="type_smoking">Number of Ciggarettes per day</string>
    <string name="AlcoholConsumption">Alcohol Consumption</string>
    <string name="ActivityLevel">Activity Level</string>
    <string name="FoodPreferences">Food Preferences</string>
    <string name="marride">Married</string>
    <string name="unmarride">Single</string>
    <string name="allergies">Add Allergies</string>
    <string name="currentMedications">Add Current medicines</string>
    <string name="pastMedications">Add Past medicines</string>
    <string name="chronicDiseases">Chronic Diseases</string>
    <string name="injuries">Injuries</string>
    <string name="surgeries">Surgeries</string>
    <string name="occupation">IT/ Health/ Government/ Private/ Etc.</string>
    <string name="smoking">Number of Cigarettes per day</string>
    <string name="alcoholConsumption">Alcohol Consumption</string>
    <string name="labs_not_found">"Sorry, No Result Found!\n"
                    "We were unable to find a single lab that provides the test you’ve selected"</string>
    <string name="event_confirm">""</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="enter_phone">Enter Valid Phone</string>
    <string name="enter_bdy">Enter Birthday</string>
    <string name="contact_us">Contact Us</string>
    <string name="add_review">Add Review</string>
    <string name="send">Send</string>
    <string name="valid_required_email">Email required</string>
    <string name="valid_email">Input valid email</string>
    <string name="valid_required_password">Password required</string>
    <string name="password_short">Password is too short</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_relation">Enter Relation</string>
    <string name="password_not_match">Password not matched</string>
    <string name="dobi">Enter Date of Birth</string>
    <string name="blood_grop">Enter Blood Group</string>
    <string name="valid_required_fullname">Fullname required</string>
    <string name="valid_required_phone">Phone required</string>
    <string name="valid_required_current_password">Required Current Password</string>
    <string name="valid_required_new_password">Required New Password</string>
    <string name="valid_not_match">Re Enter password not match</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="my_appointments">My Appointment</string>
    <string name="update">Update</string>
    <string name="profile_update_success">Profile Updated Successfully</string>
    <string name="new_password">New Password</string>
    <string name="cur_password">Current Password</string>
    <string name="re_password">Re Enter Password</string>
    <string name="cancel_confirmation">Are you sure to cancel appointment ?</string>
    <string name="fire">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_n_book">Confirm and Book Appointment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="cover_area">Distance : </string>
    <string name="search">Search</string>
    <string name="allow_nearby">Near By</string>
    <string name="choose_country">Choose Country</string>
    <string name="choose_city">Choose City</string>
    <string name="choose_locality">Choose Locality</string>
    <string name="feedbacktitle">Enter feedback detail to send to the developers team</string>
    <string name="feedbackname">Name</string>
    <string name="feedbackemail">Email</string>
    <string name="feedbackbody">Enter Feedback Here</string>
    <string name="feedbackresponse">Would you like to have email response</string>
    <string name="feedbackbutton">Send Feedback</string>
</resources>