<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:layout_margin="10dp"
    android:padding="10dp"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/feedbacktitle"
            android:textSize="12dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">
        </TextView>

        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/light_grey">
        </EditText>

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackemail"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/light_grey">
        </EditText>

        <Spinner
            android:id="@+id/SpinnerFeedbackType"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:entries="@array/feedbacktypelist"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/light_grey">
        </Spinner>

        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/light_grey">
        </EditText>

        <CheckBox
            android:id="@+id/CheckBoxResponse"
            android:layout_height="wrap_content"
            android:text="@string/feedbackresponse"
            android:layout_width="fill_parent"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/light_grey">
        </CheckBox>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/feedbackbutton"
            android:onClick="sendFeedback"
            android:layout_width="fill_parent"
            android:textSize="12dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/White"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/light_grey">
        </Button>

    </LinearLayout>
</ScrollView>